--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -154,8 +154,8 @@
                                     <option value="12.06.21 (Sa) 10 – 13 Uhr">12.06.21 (Sa) 10 – 13 Uhr</option>
                                     <!--<option value="12.06.21 (Sa) 17:30 – 20:30 Uhr">12.06.21 (Sa) 17:30 – 20:30 Uhr</option>-->
                                     <option value="13.06.21 (So) 10 – 13 Uhr">13.06.21 (So) 10 – 13 Uhr</option>
-                                    <option value="18.06.21 (Fr) 17:30 – 20:30 Uhr">18.06.21 (Fr) 17:30 – 20:30 Uhr</option>
-                                    <option value="19.06.21 (Sa) 10 – 13 Uhr">19.06.21 (Sa) 10 – 13 Uhr</option>
+                                    <option value="18.06.21 (Fr) 17:30 – 20:30 Uhr">18.06.21 (Fr) 17:30 – 20:30 Uhr - nur noch 1 Platz</option>
+                                    <!--option value="19.06.21 (Sa) 10 – 13 Uhr">19.06.21 (Sa) 10 – 13 Uhr</option>-->
                                     <option value="20.06.21 (So) 10 – 13 Uhr">20.06.21 (So) 10 – 13 Uhr</option>
                                     <option value="25.06.21 (Fr) 17:30 – 20:30 Uhr">25.06.21 (Fr) 17:30 – 20:30 Uhr</option>
                                     <option value="26.06.21 (Sa) 10 – 13 Uhr">26.06.21 (Sa) 10 – 13 Uhr</option>
