Anzahl verfügbare Plätze

--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -150,11 +150,11 @@
                                 <label for="full-name">Kurs wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Kurs</option>
-                                    <option value="11.06.21 (Fr) 17:30 – 20:30 Uhr">11.06.21 (Fr) 17:30 – 20:30 Uhr</option>
+                                    <option value="11.06.21 (Fr) 17:30 – 20:30 Uhr">11.06.21 (Fr) 17:30 – 20:30 Uhr - nur noch 2 Plätze frei</option>
                                     <option value="12.06.21 (Sa) 10 – 13 Uhr">12.06.21 (Sa) 10 – 13 Uhr</option>
                                     <!--<option value="12.06.21 (Sa) 17:30 – 20:30 Uhr">12.06.21 (Sa) 17:30 – 20:30 Uhr</option>-->
                                     <option value="13.06.21 (So) 10 – 13 Uhr">13.06.21 (So) 10 – 13 Uhr</option>
-                                    <option value="18.06.21 (Fr) 17:30 – 20:30 Uhr">18.06.21 (Fr) 17:30 – 20:30 Uhr - nur noch 1 Platz</option>
+                                    <option value="18.06.21 (Fr) 17:30 – 20:30 Uhr">18.06.21 (Fr) 17:30 – 20:30 Uhr - nur noch 1 Platz frei</option>
                                     <!--option value="19.06.21 (Sa) 10 – 13 Uhr">19.06.21 (Sa) 10 – 13 Uhr</option>-->
                                     <option value="20.06.21 (So) 10 – 13 Uhr">20.06.21 (So) 10 – 13 Uhr</option>
                                     <option value="25.06.21 (Fr) 17:30 – 20:30 Uhr">25.06.21 (Fr) 17:30 – 20:30 Uhr</option>
