--- a/fussmatte.html
+++ b/fussmatte.html
@@ -73,7 +73,7 @@
                                 
                                 <p>
                                     Hier kannst du nun ganz einfach deine personalisierte Fußmatte bestellen, ich melde mich dann schnellstmöglich bei dir.
-                                    Bitte beachte bis zur Fertigstellung einen Zeitraum ab Auftragseingang von ein bis drei Wochen.
+                                    Bitte beachte bis zur Fertigstellung einen Zeitraum ab Auftragseingang von bis zu drei Wochen.
                                 </p>
                             </div>
                         </div>
