--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -156,7 +156,7 @@
                                     <!--option value="25.06.21 (Fr) 17:30 – 20:30 Uhr">25.06.21 (Fr) 17:30 – 20:30 Uhr</option-->>
                                     <option value="26.06.21 (Sa) 10 – 13 Uhr">26.06.21 (Sa) 10 – 13 Uhr</option>
                                     <option value="27.06.21 (So) 10 – 13 Uhr">27.06.21 (So) 10 – 13 Uhr - nur noch 2 Plätze frei</option>
-                                    <option value="02.07.21 (Fr) 17:30 – 20:30 Uhr">02.07.21 (Fr) 17:30 – 20:30 Uhr</option>
+                                    <option value="02.07.21 (Fr) 17:30 – 20:30 Uhr">02.07.21 (Fr) 17:30 – 20:30 Uhr - nur noch 1 Platz frei</option>
                                     <!--<option value="Leer">Aktuell keine Termine verfügbar</option>-->
                                 </select>
                             </div>
