--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -150,9 +150,11 @@
                                 <label for="full-name">Kurs wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Kurs</option>
-                                    <option value="26.06.21 (Sa) 10 – 13 Uhr">26.06.21 (Sa) 10 – 13 Uhr</option>
-                                    <option value="27.06.21 (So) 10 – 13 Uhr">27.06.21 (So) 10 – 13 Uhr - nur noch 2 Plätze frei</option>
-                                    <option value="02.07.21 (Fr) 17:30 – 20:30 Uhr">02.07.21 (Fr) 17:30 – 20:30 Uhr - nur noch 1 Platz frei</option>
+                                    <option value="02.07.21 (Fr) 17:30 – 20:30 Uhr">02.07.21 (Fr) 17:30 – 20:30 Uhr</option>
+                                    <option value="30.07.21 (Fr) 17:30 – 20:30 Uhr">30.07.21 (Fr) 17:30 - 20:30 Uhr</option>
+                                    <option value="13.08.21 (Fr) 17:30 - 20:30 Uhr">13.08.21 (Fr) 17:30 - 20:30 Uhr</option>
+                                    <option value="03.09.21 (Fr) 17:30 - 20:30 Uhr"></option>03.09.21 (Fr) 17:30 - 20:30</option>
+                                    <option value="05.09.21 (So) 10 - 13 Uhr">05.09.21 (So) 10 - 13 Uhr</option>
                                     <!--<option value="Leer">Aktuell keine Termine verfügbar</option>-->
                                 </select>
                             </div>
