--- a/kursbuchenAdvanced.html
+++ b/kursbuchenAdvanced.html
@@ -145,7 +145,7 @@
                                 <label for="full-name">Kurs wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Kurs</option>
-                                    <option value="Kein Termin">Aktuell keine Termine verfügbar</option>
+                                    <option value="03.09.21 (Fr) 17:30 - 20:30 Uhr"></option>03.09.21 (Fr) 17:30 - 20:30</option>
                                     <!--<option value="Fortgeschritten  26.05.2020">Fortgeschritten 26.05.2020</option>-->
                                 </select>
                             </div>
