--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -154,6 +154,8 @@
                                     <option value="30.07.21 (Fr) 17:30 – 20:30 Uhr">30.07.21 (Fr) 17:30 - 20:30 Uhr</option>
                                     <option value="13.08.21 (Fr) 17:30 - 20:30 Uhr">13.08.21 (Fr) 17:30 - 20:30 Uhr</option>
                                     <option value="05.09.21 (So) 10 - 13 Uhr">05.09.21 (So) 10 - 13 Uhr</option>
+                                    <option value="10.09.21 (Fr) 17:30 - 20:30 Uhr">10.09.21 (Fr) 17:30 - 20:30 Uhr</option>
+                                    <option value="18.09.21 (Sa) 10 - 13 Uhr">18.09.21 (Sa) 10 - 13 Uhr</option>
                                     <!--<option value="Leer">Aktuell keine Termine verfügbar</option>-->
                                 </select>
                             </div>
