--- a/shop.html
+++ b/shop.html
@@ -90,8 +90,12 @@
                 <div class="col-md-8 text-center">
                     <h2 class="mb-4 section-title">Portfolio</h2>
                     <p>
+                        SOMMERPAUSE!
+                        Bestellungen ab dem 19. Juli werden erst nach meiner Sommer-Hochzeitspause am 10.08.2021 wieder bearbeitet. Bitte beachte dies bei deiner Bestellung.
+                        
+
                         Jeder Artikel ist ein Unikat und wird von Hand beschriftet.<br />
-                        Bitte beachtet deshalb eine etwas längere Phase zur Erstellung von bis zu zwei Wochen.<br />
+                        <!--Bitte beachtet deshalb eine etwas längere Phase zur Erstellung von bis zu drei Wochen.<br />-->
                         <!--Besucht auch gerne mal meine Rubrik im <a href="https://perlenkinderwelt.de/papeterie/" target="_blank">Perlenkinderwelt</a> Shop.-->
                     </p>
                 </div>
