--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -153,7 +153,7 @@
                                     <!--option value="05.09.21 (So) 10 - 13 Uhr">05.09.21 (So) 10 - 13 Uhr</option>-->
                                     <option value="10.09.21 (Fr) 17:30 - 20:30 Uhr">10.09.21 (Fr) 17:30 - 20:30 Uhr</option>
                                     <option value="24.09.21 (Fr) 17:30 - 20:30 Uhr">24.09.21 (Fr) 17:30 - 20:30 Uhr</option>
-                                    <option value="25.09.21 (Sa) 10 - 13 Uhr">25.09.21 (Sa) 10 - 13 Uhr</option>
+                                    <!--option value="25.09.21 (Sa) 10 - 13 Uhr">25.09.21 (Sa) 10 - 13 Uhr</option>-->
                                     <!--<option value="Leer">Aktuell keine Termine verfügbar</option>-->
                                 </select>
                             </div>
