--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -90,7 +90,7 @@
                                 <span class="ion-ios-location icon mr-3"></span>
                                 <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Endlich wieder Workshops!</h1>
 
-                            <p>Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops bei einem Inzidenzwert unter 100 stattfinden zu lassen: Wichtig dabei ist es nur, die 3G’s (geimpft, genesen, getestet) zu beachten. Bittte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
+                            <p>Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops bei einem Inzidenzwert unter 100 stattfinden zu lassen: Wichtig dabei ist es nur, die 3G’s (geimpft, genesen, getestet) zu beachten. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
 
                             <p>
                                 Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
@@ -151,9 +151,11 @@
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Kurs</option>
                                     <!--option value="05.09.21 (So) 10 - 13 Uhr">05.09.21 (So) 10 - 13 Uhr</option>-->
-                                    <option value="10.09.21 (Fr) 17:30 - 20:30 Uhr">10.09.21 (Fr) 17:30 - 20:30 Uhr</option>
-                                    <option value="24.09.21 (Fr) 17:30 - 20:30 Uhr">24.09.21 (Fr) 17:30 - 20:30 Uhr</option>
-                                    <!--option value="25.09.21 (Sa) 10 - 13 Uhr">25.09.21 (Sa) 10 - 13 Uhr</option>-->
+                                    <!--<option value="10.09.21 (Fr) 17:30 - 20:30 Uhr">10.09.21 (Fr) 17:30 - 20:30 Uhr</option>
+                                    <option value="24.09.21 (Fr) 17:30 - 20:30 Uhr">24.09.21 (Fr) 17:30 - 20:30 Uhr</option>-->
+                                    <option value="03.10.21 (So) 10 - 13 Uhr">03.10.21 (So) 10 - 13 Uhr</option>
+                                    <option value="09.10.21 (Sa) 10 - 13 Uhr">09.10.21 (Sa) 10 - 13 Uhr</option>
+                                    <option value="15.10.21 (Fr) 17:30 - 20:30 Uhr">15.10.21 (Fr) 17:30 - 20:30 Uhr</option>
                                     <!--<option value="Leer">Aktuell keine Termine verfügbar</option>-->
                                 </select>
                             </div>
