--- a/fussmatte.html
+++ b/fussmatte.html
@@ -38,7 +38,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="        background-image: url('images/Fußmatte_ICKERT.jpg');">
+         style="        background-image: url('images/Fußmatte_PÜTZ.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll">
