--- a/shop.html
+++ b/shop.html
@@ -117,7 +117,7 @@
                             <h2>Personalisierte Fußmatten</h2>
                             <p>ab 28 €</p>
                         </div>
-                        <img src="images/Website_5Shop_Kachel_FußmatteIMG_8261.jpg" alt="Image" class="img-fluid">
+                        <img src="images/Fußmatte_ICKERT.jpg" alt="Image" class="img-fluid">
                     </a>
                 </div>
 
