--- a/kursbuchenAdvanced.html
+++ b/kursbuchenAdvanced.html
@@ -145,7 +145,9 @@
                                 <label for="full-name">Kurs wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Kurs</option>
-                                    <!--option value="03.09.21 (Fr) 17:30 - 20:30 Uhr">03.09.21 (Fr) 17:30 - 20:30</option>-->
+                                    <option value="22.10.21 (Fr) 17:30 - 19:30 Uhr"> 22.10.21 (Fr) 17:30 - 19:30 Uhr</option>
+                                    <option value="27.11.21 (Sa) 10 - 12 Uhr"> 27.11.21 (Sa) 10 - 12 Uhr</option>
+
                                 </select>
                             </div>
                         </div>
