--- a/gutscheinbestellen.html
+++ b/gutscheinbestellen.html
@@ -114,7 +114,7 @@
                                 <label for="full-name">Personalisierung mit Namen und Anlass-bezogen (z. B. Für Marie zum Geburtstag) sowie einer hübschen Aufbereitung im Umschlag -> + 3 €</label>
                                 <select name="Personalisierung" required="" class="form-control " style="height:50px">
                                     <option value="Ohne">Ohne</option>
-                                    <option value="Personalisierung dazubuchen 2€">Personalisierung dazubuchen</option>
+                                    <option value="Personalisierung und hübsche Verpackung dazubuchen 4€">Personalisierung  und hübsche Verpackung dazubuchen</option>
                                 </select>
 
                             </div>
