--- a/kursbuchenAdvanced.html
+++ b/kursbuchenAdvanced.html
@@ -145,8 +145,9 @@
                                 <label for="full-name">Kurs wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Kurs</option>
-                                    <option value="15.10.21 (Fr) 17:30 - 19:30 Uhr"> 15.10.21 (Fr) 17:30 - 19:30 Uhr</option>
-                                    <option value="27.11.21 (Sa) 10 - 12 Uhr"> 27.11.21 (Sa) 10 - 12 Uhr</option>
+                                    <option value="15.10.21 (Fr) 17:30 - 20 Uhr"> 15.10.21 (Fr) 17:30 - 20 Uhr</option>
+                                    <option value="05.12.21 (So) 10 - 12:30 Uhr"> 05.12.21 (So) 10 - 12:30 Uhr</option>
+                                    <!--option value="27.11.21 (Sa) 10 - 12 Uhr"> 27.11.21 (Sa) 10 - 12 Uhr</option>-->
 
                                 </select>
                             </div>
