--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -155,10 +155,13 @@
                                     <option value="24.09.21 (Fr) 17:30 - 20:30 Uhr">24.09.21 (Fr) 17:30 - 20:30 Uhr</option>-->
                                     <option value="09.10.21 (Sa) 10 - 13 Uhr">09.10.21 (Sa) 10 - 13 Uhr</option>
                                     <option value="10.10.21 (So) 10 - 13 Uhr">10.10.21 (So) 10 - 13 Uhr</option>
-                                    <!--option value="15.10.21 (Fr) 17:30 - 20:30 Uhr">15.10.21 (Fr) 17:30 - 20:30 Uhr</option>-->
                                     <option value="30.10.21 (Sa) 10 - 13 Uhr">30.10.21 (Sa) 10 - 13 Uhr</option>
-                                    <option value="21.11.21 (So) 10 - 13 Uhr">21.11.21 (So) 10 - 13 Uhr</option>
-                                    <option value="28.11.21 (So) 10 - 13 Uhr">28.11.21 (So) 10 - 13 Uhr</option>
+                                    <option value="03.12.21 (Fr) 17:30 - 20:30 Uhr">03.12.21 (Fr) 17:30 - 20:30 Uhr</option>
+                                    <option value="10.12.21 (Fr) 17:30 - 20:30 Uhr">10.12.21 (Fr) 17:30 - 20:30 Uhr</option>
+                                    <option value="12.12.21 (So) 10 - 13 Uhr">12.12.21 (So) 10 - 13 Uhr</option>
+                                    <option value="19.12.21 (So) 10 - 13 Uhr">19.12.21 (So) 10 - 13 Uhr</option>
+                                    <!--option value="21.11.21 (So) 10 - 13 Uhr">21.11.21 (So) 10 - 13 Uhr</option>
+                                    <option value="28.11.21 (So) 10 - 13 Uhr">28.11.21 (So) 10 - 13 Uhr</option>-->
                                     
 
 
