neue Termine November

--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -150,6 +150,8 @@
                                 <label for="full-name">Kurs wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Kurs</option>
+                                    <option value="14.11.21 (So) 15 - 18 Uhr">14.11.21 (So) 15 - 18 Uhr</option>
+                                    <option value="28.11.21 (So) 10 - 13 Uhr">28.11.21 (So) 10 - 13 Uhr</option>
                                     <option value="03.12.21 (Fr) 17:30 - 20:30 Uhr">03.12.21 (Fr) 17:30 - 20:30 Uhr</option>
                                     <option value="12.12.21 (So) 10 - 13 Uhr">12.12.21 (So) 10 - 13 Uhr</option>
                                     <!--option value="21.11.21 (So) 10 - 13 Uhr">21.11.21 (So) 10 - 13 Uhr</option>
