--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -90,11 +90,13 @@
                                 <span class="ion-ios-location icon mr-3"></span>
                                 <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Endlich wieder Workshops!</h1>
 
-                            <p>Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops bei einem Inzidenzwert unter 100 stattfinden zu lassen: Wichtig dabei ist es nur, die 3G’s (geimpft, genesen, getestet) zu beachten. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
+                            <p>Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen: Wichtig dabei ist es nur, die 3G’s (geimpft, genesen, getestet) zu beachten. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
 
                             <p>
+                                Termine mit freien Plätzen findest Du unten im Anmeldeformular.
+                                
                                 Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
-                                Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu.
+                                Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
                             </p>
 
                             <p>
