--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -148,9 +148,9 @@
                                 <input type="email" id="email" name="_replyto" placeholder="deineEmail@domain.de" class="form-control " required>
                             </div>
                             <div class="col-md-6 form-group">
-                                <label for="full-name">Kurs wählen</label>
+                                <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
-                                    <option value="" selected="" disabled="">Kurs</option>
+                                    <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
                                     <option value="14.11.21 (So) 15 - 18 Uhr - noch 4">14.11.21 (So) 15 - 18 Uhr - noch 4</option>
                                     <option value="28.11.21 (So) 10 - 13 Uhr">28.11.21 (So) 10 - 13 Uhr</option>
                                     <option value="03.12.21 (Fr) 17:30 - 20:30 Uhr - noch 6">03.12.21 (Fr) 17:30 - 20:30 Uhr - noch 6</option>
