--- a/kursbuchenAdvanced.html
+++ b/kursbuchenAdvanced.html
@@ -90,14 +90,20 @@
                                 <span class="ion-ios-location icon mr-3"></span>
 
                             <p>
+                                Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen: Wichtig dabei ist es nur, die 3G’s (geimpft, genesen, getestet) zu beachten. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
+
+                            <p>
+                                Termine mit freien Plätzen findest Du unten im Anmeldeformular.
                                 Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
+                                Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
+                            </p>
+
+                            <p>
+                                <small>
+                                    Die Workshop Termine werden regelmäßig aktualisiert und ergänzt. Mach Dir also keine Sorge, falls gerade kein passender Workshop Termin für Dich dabei ist.Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
                                 Nach dem Abschicken des Formulars sende ich Dir alle wichtigen Informationen per Mail zu.
                             </p>
                             <p>
-                                Die Workshop Termine werden regelmäßig aktualisiert und ergänzt. Mach Dir also keine Sorge, falls gerade kein passender Workshop Termin für Dich dabei ist.
-                            </p>
-                            <p>
-                                Für ein individuelles Lettering oder individuelle Workshops kannst Du mich unter <a href="anfrage.html" target="_blank">Deine individuelle Anfrage</a> kontaktieren. Workshop-Gutscheine kannst Du im Shop erwerben.
                             </p>
                             </p>
                         </div>
