--- a/kursbuchenAdvanced.html
+++ b/kursbuchenAdvanced.html
@@ -148,9 +148,9 @@
                                 <input type="email" id="email" name="_replyto" placeholder="deineEmail@domain.de" class="form-control " required>
                             </div>
                             <div class="col-md-6 form-group">
-                                <label for="full-name">Kurs wählen</label>
+                                <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
-                                    <option value="" selected="" disabled="">Kurs</option>
+                                    <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
                                     <option value="05.12.21 (So) 10 - 12:30 Uhr"> 05.12.21 (So) 10 - 12:30 Uhr</option>
                                     
 
