--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -92,7 +92,7 @@
 
                     <a href="kursbuchen.html" target="_blank" class="work-thumb">
                         <div class="work-text">
-                            <h2>Anfänger</h2>
+                            <h2>Workshop für Anfänger</h2>
                             <p>55€ Kursgebühr</p>
                         </div>
                         <img src="images/AnfaengerWorkshop.png" alt="Image" class="img-fluid">
@@ -100,7 +100,7 @@
 
                     <a href="kursbuchenAdvanced.html" target="_blank" class="work-thumb">
                         <div class="work-text">
-                            <h2>Fortgeschrittene</h2>
+                            <h2>Workshop für Fortgeschrittene</h2>
                             <p>60€ Kursgebühr</p>
                         </div>
                         <img src="images/AdvancedWorkshop.png" alt="Image" class="img-fluid">
