--- a/gutscheinbestellen.html
+++ b/gutscheinbestellen.html
@@ -111,18 +111,18 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12 form-group">
-                                <label for="full-name">Personalisierung mit Namen und Anlass-bezogen (z. B. Für Marie zum Geburtstag) sowie einer hübschen Aufbereitung im Umschlag -> + 3 €</label>
+                                <label for="full-name">Personalisierung mit Namen und Anlass (z. B. Für Marie zum Geburtstag) auf einem Umschlag (+ 3 €)</label>
                                 <select name="Personalisierung" required="" class="form-control " style="height:50px">
                                     <option value="Ohne">Ohne</option>
-                                    <option value="Personalisierung und hübsche Verpackung dazubuchen 4€">Personalisierung  und hübsche Verpackung dazubuchen</option>
+                                    <option value="Personalisierten Umschhlag dazubuchen 3 €">Personalisierten Umschlag dazubuchen 3 €</option>
                                 </select>
 
                             </div>
                             <div class="col-md-12 form-group">
-                                <label for="full-name">Versand per Post -> + 2 €</label>
+                                <label for="full-name">Versand per Post (+ 2 €)</label>
                                 <select name="Postversand" required="" class="form-control " style="height:50px">
                                     <option value="Ohne">Ohne</option>
-                                    <option value="Postversand dazubuchen 1€">Postversand dazubuchen</option>
+                                    <option value="Postversand dazubuchen 2 €">Postversand dazubuchen 2 €</option>
 
                                 </select>
                             </div>
@@ -131,7 +131,7 @@
                         <div class="row">
                             <div class="col-md-12 form-group">
                                 <label for="message">Nachricht</label>
-                                <textarea name="Nachricht" id="message" class="form-control" required cols="30" rows="8"></textarea>
+                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst du eine Nachricht für mich hinterlassen" required cols="30" rows="8"></textarea>
                             </div>
                         </div>
                         <div class="row">
