--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -110,7 +110,7 @@
                     <div class="">
                         <h3 class="mb-4">Workshops</h3>
                         <p>Hast Du Lust die Kunst des schönen Schreibens zu lernen?</p>
-                        <p>Egal, ob Du Anfänger bist, oder Du Dich schon mal im Lettering versucht hast: Im Anfänger-Workshop zeige ich Dir neben den Basics des Hand- und Brushletterings verschiedene Schriftstile, mit welchen Du im Workshop Dein erstes Schriftbild gestalten kannst.</p>
+                        <p>Egal ob Du Anfänger bist oder Du Dich schon mal im Lettering versucht hast: Im Anfänger-Workshop zeige ich Dir neben den Basics des Hand- und Brushletterings verschiedene Schriftstile, mit welchen Du im Workshop Dein erstes Schriftbild gestalten kannst.</p>
                         <p>Im darauf aufbauenden Fortgeschrittenen-Workshop vertiefen wir Deine Brushlettering-Kenntnisse, setzen uns mit der Komposition von Schriften auseinander und erweitern Deine Lettering-Fähigkeiten um Effekte zur Hintergrundgestaltung und Blending-Techniken. Beide Kurse dauern circa 3 Stunden.</p>
                         <ul class="list-unstyled mb-5">
                             <li class="mb-3">
