--- a/derstall.html
+++ b/derstall.html
@@ -89,7 +89,7 @@
                 <div class="col-md-8 text-center">
                     <h2 class="mb-4 section-title">Der Stall</h2>
                     <p>
-                        Bis vor einigen Jahren war meine Workshop Location tatsächlich noch der Stall meines Opas. Mein Papa hat gemeinsam mit meinem Bruder vor vier Jahren dann angefangen den Stall Stück für Stück umzubauen.
+                        Bis vor einigen Jahren war meine Workshop Location tatsächlich noch der Kuhstall meines Opas. Mein Papa hat gemeinsam mit meinem Bruder vor fünf Jahren dann angefangen den Stall Stück für Stück umzubauen.
                     </p>
                 </div>
             </div>
