--- a/gutscheinbestellen.html
+++ b/gutscheinbestellen.html
@@ -111,7 +111,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12 form-group">
-                                <label for="full-name">Personalisierung mit Namen und Anlass (z. B. Für Marie zum Geburtstag) auf einem Umschlag (+ 3 €)</label>
+                                <label for="full-name">Personalisierung mit Name und Anlass (z. B. Für Marie zum Geburtstag) auf einem Umschlag (+ 3 €)</label>
                                 <select name="Personalisierung" required="" class="form-control " style="height:50px">
                                     <option value="Ohne">Ohne</option>
                                     <option value="Personalisierten Umschhlag dazubuchen 3 €">Personalisierten Umschlag dazubuchen 3 €</option>
