--- a/blumenkranz.html
+++ b/blumenkranz.html
@@ -142,7 +142,7 @@
                         <div class="row">
                             <div class="col-md-12 form-group">
                                 <label for="message">Text</label>
-                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Dein Wunschtext" required cols="30" rows="8"></textarea>
+                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst Du deinen Wunschtext einfügen und mir eine Nachricht hinterlassen, z. B. WIE SCHÖN, DASS DU DA BIST" required cols="30" rows="8"></textarea>
                             </div>
                         </div>
                         <div class="row">
