--- a/gutscheinbestellen.html
+++ b/gutscheinbestellen.html
@@ -60,7 +60,7 @@
                                 <span class="ion-ios-location icon mr-3"></span>
 
                             <p>
-                                Hier kannst du ganz einfach deinen Gutschein bestellen, ich melde mich dann schnellstmöglich bei dir.
+                                Hier kannst du ganz einfach deinen Gutschein für einen Lettering Kurs bestellen, ich melde mich dann schnellstmöglich bei dir.
                                 Wenn du den Gutschein per Post erhalten möchtest, denk bitte daran, deine Postanschrift ins Nachrichtenfeld zu schreiben.
                             </p>
                         </div>                       
@@ -121,8 +121,8 @@
                             <div class="col-md-12 form-group">
                                 <label for="full-name">Versand per Post (+ 2 €)</label>
                                 <select name="Postversand" required="" class="form-control " style="height:50px">
-                                    <option value="Ohne">Ohne</option>
-                                    <option value="Postversand dazubuchen 2 €">Postversand dazubuchen 2 €</option>
+                                    <option value="Abholung">Abholung</option>
+                                    <option value="Postversand dazu buchen 2 €">Postversand dazu buchen 2 €</option>
 
                                 </select>
                             </div>
@@ -131,7 +131,7 @@
                         <div class="row">
                             <div class="col-md-12 form-group">
                                 <label for="message">Nachricht</label>
-                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst du eine Nachricht für mich hinterlassen" required cols="30" rows="8"></textarea>
+                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst du eine Nachricht für mich hinterlassen und bei Versand die Versandadresse hinterlassen." required cols="30" rows="8"></textarea>
                             </div>
                         </div>
                         <div class="row">
