--- a/fussmatte.html
+++ b/fussmatte.html
@@ -109,30 +109,32 @@
                                     <label for="full-name">Größe wählen/Preisinformation</label>
                                     <select name="Groesse" required="" class="form-control " style="height:50px">
                                         <option value="Select" selected="" disabled="">Groesse</option>
-                                        <option value="40x60cm Bis 10 Zeichen 28€">40x60cm Bis 10 Zeichen 28€</option>
-                                        <option value="40x60cm Bis 20 Zeichen 36€">40x60cm Bis 20 Zeichen 38€</option>
-                                        <option value="40x60cm Ab 21 Zeichen 43€" >40x60cm Ab 21 Zeichen 43€</option>
-                                        <option value="50x80cm Bis 10 Zeichen 32€">50x80cm Bis 10 Zeichen 32€</option>
-                                        <option value="50x80cm Bis 20 Zeichen 40€">50x80cm Bis 20 Zeichen 42€</option>
-                                        <option value="50x80cm Bis 30 Zeichen 47€">50x80cm Bis 30 Zeichen 47€</option>
-                                        <option value="50x80cm Ab 31 Zeichen 52€" >50x80cm Ab 31 Zeichen 52€</option>
-                                        <option value="60x90cm Bis 10 Zeichen 36€">60x90cm Bis 10 Zeichen 36€</option>
-                                        <option value="60x90cm Bis 20 Zeichen 46€">60x90cm Bis 20 Zeichen 46€</option>
-                                        <option value="60x90cm Bis 30 Zeichen 51€">60x90cm Bis 30 Zeichen 51€</option>
-                                        <option value="60x90cm Ab 31 Zeichen 56€" >60x90cm Ab 31 Zeichen 56€</option>
+                                        <option value="40x60cm Bis 10 Zeichen 28 €">40x60cm Bis 10 Zeichen 28 €</option>
+                                        <option value="40x60cm Bis 20 Zeichen 38 €">40x60cm Bis 20 Zeichen 38 €</option>
+                                        <option value="40x60cm Bis 30 Zeichen 43 €" >40x60cm Bis 30 Zeichen 43 €</option>
+                                        <option value="40x60cm Ab 31 Zeichen 48 €" >40x60cm Ab 31 Zeichen 48 €</option>
+                                        <option value="50x80cm Bis 10 Zeichen 32 €">50x80cm Bis 10 Zeichen 32 €</option>
+                                        <option value="50x80cm Bis 20 Zeichen 42 €">50x80cm Bis 20 Zeichen 42 €</option>
+                                        <option value="50x80cm Bis 30 Zeichen 47 €">50x80cm Bis 30 Zeichen 47 €</option>
+                                        <option value="50x80cm Ab 31 Zeichen 52 €" >50x80cm Ab 31 Zeichen 52 €</option>
+                                        <option value="60x90cm Bis 10 Zeichen 36 €">60x90cm Bis 10 Zeichen 36 €</option>
+                                        <option value="60x90cm Bis 20 Zeichen 46 €">60x90cm Bis 20 Zeichen 46 €</option>
+                                        <option value="60x90cm Bis 30 Zeichen 51 €">60x90cm Bis 30 Zeichen 51 €</option>
+                                        <option value="60x90cm Ab 31 Zeichen 56 €" >60x90cm Ab 31 Zeichen 56 €</option>
 
                                         <!--
-                                            40x60cm Bis 10 Zeichen 28€
-                                            40x60cm Bis 20 Zeichen 38€
-                                            40x60cm Ab 21 Zeichen 43€
-                                            50x80cm Bis 10 Zeichen 32€
-                                            50x80cm Bis 20 Zeichen 40€
-                                            50x80cm Bis 30 Zeichen 47€
-                                            50x80cm Ab 31 Zeichen 52€
-                                            60x90cm Bis 10 Zeichen 36€
-                                            60x90cm Bis 20 Zeichen 46€
-                                            60x90cm Bis 30 Zeichen 51€
-                                            60x90cm Ab 31 Zeichen 56€
+                                            40x60cm Bis 10 Zeichen 28 €
+                                            40x60cm Bis 20 Zeichen 38 €
+                                            40x60cm Bis 30 Zeichen 43 €
+                                            40x60cm Ab 31 Zeichen 48 €
+                                            50x80cm Bis 10 Zeichen 32 €
+                                            50x80cm Bis 20 Zeichen 42 €
+                                            50x80cm Bis 30 Zeichen 47 €
+                                            50x80cm Ab 31 Zeichen 52 €
+                                            60x90cm Bis 10 Zeichen 36 €
+                                            60x90cm Bis 20 Zeichen 46 €
+                                            60x90cm Bis 30 Zeichen 51 €
+                                            60x90cm Ab 31 Zeichen 56 €
 
 
 
@@ -141,7 +143,14 @@
                                             -->
 
 
-
+                                        </div>
+                                        <div class="col-md-12 form-group">
+                                            <label for="full-name">Versand per Post (+ 8 €)</label>
+                                            <select name="Postversand" required="" class="form-control " style="height:50px">
+                                                <option value="Abholung">Abholung</option>
+                                                <option value="Postversand dazu buchen 8 €">Postversand dazu buchen 8 €</option>
+            
+                                            </select>
                                     </select>
                                 </div>
                             </div>
