--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -177,7 +177,7 @@
                             <div class="col-md-6 form-group">
                                 <select name="Coronabedingungen" required class="form-control " style="height:50px" required>
                                     <option value="" selected="" disabled="">Coronabedingungen</option>
-                                    <option value="in den letzten 24h negativ getestet worden">in den letzten 24h negativ getestet worden</option>
+                                    <option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 24h negativ getestet worden</option>
                                     <option value="seit mindestens 14 Tagen vollständig geimpft">seit mindestens 14 Tagen vollständig geimpft</option>
                                     <option value="genesen">genesen</option>
                                 </select>
