--- a/fussmatte.html
+++ b/fussmatte.html
@@ -157,7 +157,9 @@
                             <div class="row">
                                 <div class="col-md-12 form-group">
                                     <label for="message">Text</label>
-                                    <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst Du deinen Wunschtext einfügen und mir eine Nachricht hinterlassen, z. B. HEREINSPAZIERT BEI FAMILIE SCHMITT, WILLKOMMEN BEI DEN MÜLLERS, DIE KUHNS, HIER WOHNEN MARIA UND JOSEF, ..." required cols="30" rows="8"></textarea>
+                                    <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst Du deinen Wunschtext einfügen und mir eine Nachricht hinterlassen, z. B. HEREINSPAZIERT BEI FAMILIE SCHMITT, WILLKOMMEN BEI DEN MÜLLERS, DIE KUHNS, HIER WOHNEN MARIA UND JOSEF, ...
+                                    
+                                    Möchtest du die Fußmatte per Post erhalten, kannst Du mir auch hier deine Versandadresse mitteilen (+8 €)" required cols="30" rows="8"></textarea>
                                 </div>
                             </div>
                             <div class="row">
