--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -90,7 +90,8 @@
                                 <span class="ion-ios-location icon mr-3"></span>
                                 <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Endlich wieder Workshops!</h1>
 
-                            <p>Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen: Wichtig dabei ist es nur, die 3G’s (geimpft, genesen, getestet) zu beachten. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
+                            <p>Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen, wenn passend zur jeweiligen Alarmstufe die folgenden Nachweise erbracht werden können.
+                                Basisstufe: 3G, Warnstufe: 3G+ (max. 48h alter PCR-Test), Alarmstufe: 2G. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
 
                             <p>
                                 Termine mit freien Plätzen findest Du unten im Anmeldeformular.
@@ -151,14 +152,11 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="14.11.21 (So) 15 - 18 Uhr - noch 4">14.11.21 (So) 15 - 18 Uhr - noch 4</option>
-                                    <option value="28.11.21 (So) 10 - 13 Uhr">28.11.21 (So) 10 - 13 Uhr</option>
-                                    <option value="03.12.21 (Fr) 17:30 - 20:30 Uhr - noch 6">03.12.21 (Fr) 17:30 - 20:30 Uhr - noch 6</option>
+                                    <option value="14.11.21 (So) 15 - 18 Uhr - noch 4">14.11.21 (So) 15 - 18 Uhr</option>
+                                    <option value="03.12.21 (Fr) 17:30 - 20:30 Uhr - noch 6">03.12.21 (Fr) 17:30 - 20:30 Uhr - noch 3</option>
                                     <option value="12.12.21 (So) 10 - 13 Uhr">12.12.21 (So) 10 - 13 Uhr</option>
                                     <!--option value="21.11.21 (So) 10 - 13 Uhr">21.11.21 (So) 10 - 13 Uhr</option>
-                                    <option value="28.11.21 (So) 10 - 13 Uhr">28.11.21 (So) 10 - 13 Uhr</option>-->
                                     
-
 
 
                                     <!--<option value="Leer">Aktuell keine Termine verfügbar</option>-->
@@ -177,7 +175,7 @@
                             <div class="col-md-6 form-group">
                                 <select name="Coronabedingungen" required class="form-control " style="height:50px" required>
                                     <option value="" selected="" disabled="">Coronabedingungen</option>
-                                    <option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 24h negativ getestet worden</option>
+                                    <option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 48h negativ getestet worden (PCR)</option>
                                     <option value="seit mindestens 14 Tagen vollständig geimpft">seit mindestens 14 Tagen vollständig geimpft</option>
                                     <option value="genesen">genesen</option>
                                 </select>
