--- a/kursbuchenAdvanced.html
+++ b/kursbuchenAdvanced.html
@@ -90,7 +90,8 @@
                                 <span class="ion-ios-location icon mr-3"></span>
 
                             <p>
-                                Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen: Wichtig dabei ist es nur, die 3G’s (geimpft, genesen, getestet) zu beachten. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
+                                Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen, wenn passend zur jeweiligen Alarmstufe die folgenden Nachweise erbracht werden können.
+                                Basisstufe: 3G, Warnstufe: 3G+ (max. 48h alter PCR-Test), Alarmstufe: 2G. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
 
                             <p>
                                 Termine mit freien Plätzen findest Du unten im Anmeldeformular.
@@ -168,7 +169,7 @@
                             <div class="col-md-6 form-group">
                                 <select name="Coronabedingungen" required class="form-control " style="height:50px" required>
                                     <option value="" selected="" disabled="">Coronabedingungen</option>
-                                    <option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 24h negativ getestet worden</option>
+                                    <option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 48h negativ getestet worden (PCR)</option>
                                     <option value="seit mindestens 14 Tagen vollständig geimpft">seit mindestens 14 Tagen vollständig geimpft</option>
                                     <option value="genesen">genesen</option>
                                 </select>
