--- a/kursbuchenAdvanced.html
+++ b/kursbuchenAdvanced.html
@@ -90,7 +90,7 @@
                                 <span class="ion-ios-location icon mr-3"></span>
 
                             <p>
-                                Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen, wenn passend zur jeweiligen Alarmstufe die folgenden Nachweise erbracht werden können.
+                                Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen, wenn passend zur jeweiligen Infektionsstufe die folgenden Nachweise erbracht werden können.
                                 Basisstufe: 3G, Warnstufe: 3G+ (max. 48h alter PCR-Test), Alarmstufe: 2G. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
 
                             <p>
