--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -152,6 +152,7 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
+                                    <option value="03.12.21 (Fr) 17:30 - 20:30 Uhr">03.12.21 (Fr) 17:30 - 20:30 Uhr</option>
                                     <option value="12.12.21 (So) 10 - 13 Uhr">12.12.21 (So) 10 - 13 Uhr</option>
                                     <!--option value="21.11.21 (So) 10 - 13 Uhr">21.11.21 (So) 10 - 13 Uhr</option>
                                     
