--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -154,6 +154,7 @@
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
                                     <option value="03.12.21 (Fr) 17:30 - 20:30 Uhr">03.12.21 (Fr) 17:30 - 20:30 Uhr</option>
                                     <option value="12.12.21 (So) 10 - 13 Uhr">12.12.21 (So) 10 - 13 Uhr</option>
+                                    <option value="12.01.22 (Mi) 18 - 21 Uhr">12.01.22 (Mi) 18 - 21 Uhr</option>
                                     <!--option value="21.11.21 (So) 10 - 13 Uhr">21.11.21 (So) 10 - 13 Uhr</option>
                                     
 
