--- a/fussmatte.html
+++ b/fussmatte.html
@@ -109,18 +109,18 @@
                                     <label for="full-name">Größe wählen/Preisinformation</label>
                                     <select name="Groesse" required="" class="form-control " style="height:50px">
                                         <option value="Select" selected="" disabled="">Groesse</option>
-                                        <option value="40x60cm Bis 10 Zeichen 28 €">40x60cm Bis 10 Zeichen 28 €</option>
-                                        <option value="40x60cm Bis 20 Zeichen 38 €">40x60cm Bis 20 Zeichen 38 €</option>
-                                        <option value="40x60cm Bis 30 Zeichen 43 €" >40x60cm Bis 30 Zeichen 43 €</option>
-                                        <option value="40x60cm Ab 31 Zeichen 48 €" >40x60cm Ab 31 Zeichen 48 €</option>
-                                        <option value="50x80cm Bis 10 Zeichen 32 €">50x80cm Bis 10 Zeichen 32 €</option>
-                                        <option value="50x80cm Bis 20 Zeichen 42 €">50x80cm Bis 20 Zeichen 42 €</option>
-                                        <option value="50x80cm Bis 30 Zeichen 47 €">50x80cm Bis 30 Zeichen 47 €</option>
-                                        <option value="50x80cm Ab 31 Zeichen 52 €" >50x80cm Ab 31 Zeichen 52 €</option>
-                                        <option value="60x90cm Bis 10 Zeichen 36 €">60x90cm Bis 10 Zeichen 36 €</option>
-                                        <option value="60x90cm Bis 20 Zeichen 46 €">60x90cm Bis 20 Zeichen 46 €</option>
-                                        <option value="60x90cm Bis 30 Zeichen 51 €">60x90cm Bis 30 Zeichen 51 €</option>
-                                        <option value="60x90cm Ab 31 Zeichen 56 €" >60x90cm Ab 31 Zeichen 56 €</option>
+                                        <option value="40x60cm Bis 10 Zeichen 30 €">40x60cm Bis 10 Zeichen 30 €</option>
+                                        <option value="40x60cm Bis 20 Zeichen 40 €">40x60cm Bis 20 Zeichen 40 €</option>
+                                        <option value="40x60cm Bis 30 Zeichen 45 €" >40x60cm Bis 30 Zeichen 45 €</option>
+                                        <option value="40x60cm Ab 31 Zeichen 50 €" >40x60cm Ab 31 Zeichen 50 €</option>
+                                        <!--option value="50x80cm Bis 10 Zeichen 34 €">50x80cm Bis 10 Zeichen 34 €</option>
+                                        <option value="50x80cm Bis 20 Zeichen 44 €">50x80cm Bis 20 Zeichen 44 €</option>
+                                        <option value="50x80cm Bis 30 Zeichen 49 €">50x80cm Bis 30 Zeichen 49 €</option>
+                                        <option value="50x80cm Ab 31 Zeichen 54 €" >50x80cm Ab 31 Zeichen 54 €</option-->
+                                        <option value="60x90cm Bis 10 Zeichen 38 €">60x90cm Bis 10 Zeichen 38 €</option>
+                                        <option value="60x90cm Bis 20 Zeichen 48 €">60x90cm Bis 20 Zeichen 48 €</option>
+                                        <option value="60x90cm Bis 30 Zeichen 53 €">60x90cm Bis 30 Zeichen 53 €</option>
+                                        <option value="60x90cm Ab 31 Zeichen 58 €" >60x90cm Ab 31 Zeichen 58 €</option>
 
                                         <!--
                                             40x60cm Bis 10 Zeichen 28 €
