--- a/gutscheinbestellen.html
+++ b/gutscheinbestellen.html
@@ -114,7 +114,7 @@
                                 <label for="full-name">Personalisierung mit Name und Anlass (z. B. Für Marie zum Geburtstag) auf einem Umschlag (+ 3 €)</label>
                                 <select name="Personalisierung" required="" class="form-control " style="height:50px">
                                     <option value="Ohne">Ohne</option>
-                                    <option value="Personalisierten Umschhlag dazubuchen 3 €">Personalisierten Umschlag dazubuchen 3 €</option>
+                                    <option value="Personalisierten Umschlag dazubuchen 3 €">Personalisierten Umschlag dazubuchen 3 €</option>
                                 </select>
 
                             </div>
