--- a/fussmatte.html
+++ b/fussmatte.html
@@ -112,15 +112,15 @@
                                         <option value="40x60cm Bis 10 Zeichen 30 €">40x60cm Bis 10 Zeichen 30 €</option>
                                         <option value="40x60cm Bis 20 Zeichen 40 €">40x60cm Bis 20 Zeichen 40 €</option>
                                         <option value="40x60cm Bis 30 Zeichen 45 €" >40x60cm Bis 30 Zeichen 45 €</option>
-                                        <option value="40x60cm Ab 31 Zeichen 50 €" >40x60cm Ab 31 Zeichen 50 €</option>
+                                        <option value="40x60cm Bis 40 Zeichen 50 €" >40x60cm Bis 40 Zeichen 50 €</option>
                                         <!--option value="50x80cm Bis 10 Zeichen 34 €">50x80cm Bis 10 Zeichen 34 €</option>
                                         <option value="50x80cm Bis 20 Zeichen 44 €">50x80cm Bis 20 Zeichen 44 €</option>
                                         <option value="50x80cm Bis 30 Zeichen 49 €">50x80cm Bis 30 Zeichen 49 €</option>
-                                        <option value="50x80cm Ab 31 Zeichen 54 €" >50x80cm Ab 31 Zeichen 54 €</option-->
+                                        <option value="50x80cm Bis 40 Zeichen 54 €" >50x80cm Bis 40 Zeichen 54 €</option-->
                                         <option value="60x90cm Bis 10 Zeichen 38 €">60x90cm Bis 10 Zeichen 38 €</option>
                                         <option value="60x90cm Bis 20 Zeichen 48 €">60x90cm Bis 20 Zeichen 48 €</option>
                                         <option value="60x90cm Bis 30 Zeichen 53 €">60x90cm Bis 30 Zeichen 53 €</option>
-                                        <option value="60x90cm Ab 31 Zeichen 58 €" >60x90cm Ab 31 Zeichen 58 €</option>
+                                        <option value="60x90cm Bis 40 Zeichen 58 €" >60x90cm Bis 40 Zeichen 58 €</option>
 
                                         <!--
                                             40x60cm Bis 10 Zeichen 28 €
