--- a/shop.html
+++ b/shop.html
@@ -104,7 +104,7 @@
                 <div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade" data-aos-delay="100">
                     <a href="gutscheinbestellen.html" class="work-thumb">
                         <div class="work-text">
-                            <h2>Gutscheine</h2>
+                            <h2>Gutscheine für Lettering-Kurse</h2>
 
                         </div>
                         <img src="images/Website_5Shop_Kachel_Gutschein_Lettering im Stall-149-1000p.jpg" alt="Image" class="img-fluid">
@@ -115,7 +115,7 @@
                     <a href="fussmatte.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Personalisierte Fußmatten</h2>
-                            <p>ab 28 €</p>
+                            <p>ab 30 €</p>
                         </div>
                         <img src="images/Fußmatte_ICKERT.jpg" alt="Image" class="img-fluid">
                     </a>
