--- a/gutscheinbestellen.html
+++ b/gutscheinbestellen.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
-                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Gutschein für Lettering-Kurse bestellen</h1>
+                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Gutschein bestellen</h1>
                     <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Anmeldung">Bestellen</a></p>
                 </div>
             </div>
