Postversand bei Fussmatte

--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -90,7 +90,7 @@
             <div class="row mb-5">
                 <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
 
-                    <a href="kursbuchen.html" target="_blank" class="work-thumb">
+                    <a href="anfaengerkursbuchen.html" target="_blank" class="work-thumb">
                         <div class="work-text">
                             <h2>Workshop für Anfänger</h2>
                             <p>55€ Kursgebühr</p>
@@ -98,7 +98,7 @@
                         <img src="images/AnfaengerWorkshop.png" alt="Image" class="img-fluid">
                     </a>
 
-                    <a href="kursbuchenAdvanced.html" target="_blank" class="work-thumb">
+                    <a href="fortgeschrittenenkursbuchen.html" target="_blank" class="work-thumb">
                         <div class="work-text">
                             <h2>Workshop für Fortgeschrittene</h2>
                             <p>60€ Kursgebühr</p>
