--- a/fussmatte.html
+++ b/fussmatte.html
@@ -134,11 +134,6 @@
                                     60x90cm Bis 20 Zeichen 46 €
                                     60x90cm Bis 30 Zeichen 51 €
                                     60x90cm Ab 31 Zeichen 56 €
-
-
-
-
-
                                     -->
 
 
@@ -148,10 +143,10 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12 form-group">
-                                <label for="full-name">Versand per Post (+ 8 €)</label>
-                                <select name="Postversand" required="" class="form-control " style="height:50px">
-                                    <option value="Abholung">Abholung</option>
-                                    <option value="Postversand dazu buchen 8 €">Postversand dazu buchen 8 €</option>
+                                <label for="full-name">Abholung/Versand (+8 €)</label>
+                                <select name="Versand" required="" class="form-control " style="height:50px">
+                                    <option value="Abholung bei Lettering im Stall">Abholung bei Lettering im Stall</option>
+                                    <option value="Versand (+8 €)">Versand (+8 €)</option>
 
                                 </select>
                             </div>
