--- a/fussmatte.html
+++ b/fussmatte.html
@@ -143,9 +143,10 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12 form-group">
-                                <label for="full-name">Abholung/Versand (+8 €)</label>
+                                <label for="full-name">Abholung/Versand</label>
                                 <select name="Versand" required="" class="form-control " style="height:50px">
-                                    <option value="Abholung bei Lettering im Stall">Abholung bei Lettering im Stall</option>
+                                    <option value="Select" selected="" disabled="">Bitte wählen</option>
+                                    <option value="Abholung bei Lettering im Stall in Markelsheim">Abholung bei Lettering im Stall in Markelsheim</option>
                                     <option value="Versand (+8 €)">Versand (+8 €)</option>
 
                                 </select>
@@ -154,7 +155,7 @@
                         <div class="row">
                             <div class="col-md-12 form-group">
                                 <label for="message">Text</label>
-                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst Du bei Versand deine Adresse und deinen Wunschtext einfügen, z. B. HEREINSPAZIERT BEI FAMILIE SCHMITT, WILLKOMMEN BEI DEN MÜLLERS, DIE KUHNS, HIER WOHNEN MARIA UND JOSEF, ..." required cols="30" rows="8"></textarea>
+                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst Du die Versandadresse angeben und deinen Wunschtext einfügen, z. B. Die Schmitts, Familie Schimtt, Hier wohnen die Emily + Adnré, Willkommen bei den Schmitts, ..." required cols="30" rows="8"></textarea>
                             </div>
                         </div>
                         <div class="row">
