--- a/fussmatte.html
+++ b/fussmatte.html
@@ -155,7 +155,7 @@
                         <div class="row">
                             <div class="col-md-12 form-group">
                                 <label for="message">Text</label>
-                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst Du die Versandadresse angeben und deinen Wunschtext einfügen, z. B. Die Schmitts, Familie Schimtt, Hier wohnen die Emily + Adnré, Willkommen bei den Schmitts, ..." required cols="30" rows="8"></textarea>
+                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst Du die Versandadresse angeben und deinen Wunschtext einfügen, z. B. Die Schmitts, Familie Schimtt, Hier wohnen Emily + André, Willkommen bei den Schmitts, ..." required cols="30" rows="8"></textarea>
                             </div>
                         </div>
                         <div class="row">
