--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -91,7 +91,7 @@
                                 <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Endlich wieder Workshops!</h1>
 
                             <p>Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen, wenn passend zur jeweiligen Infektionsstufe die folgenden Nachweise erbracht werden können.
-                                Basisstufe: 3G, Warnstufe: 3G+ (max. 48h alter PCR-Test), Alarmstufe: 2G. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
+                                Basisstufe: 3G, Warnstufe: 3G+ (max. 48h alter PCR-Test), Alarmstufe: 2G(+). Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
 
                             <p>
                                 Termine mit freien Plätzen findest Du unten im Anmeldeformular.
@@ -152,9 +152,8 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="03.12.21 (Fr) 17:30 - 20:30 Uhr">03.12.21 (Fr) 17:30 - 20:30 Uhr</option>
-                                    <option value="12.12.21 (So) 10 - 13 Uhr">12.12.21 (So) 10 - 13 Uhr</option>
                                     <option value="12.01.22 (Mi) 18 - 21 Uhr">12.01.22 (Mi) 18 - 21 Uhr</option>
+                                    <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     <!--option value="21.11.21 (So) 10 - 13 Uhr">21.11.21 (So) 10 - 13 Uhr</option>
                                     
 
@@ -175,9 +174,9 @@
                             <div class="col-md-6 form-group">
                                 <select name="Coronabedingungen" required class="form-control " style="height:50px" required>
                                     <option value="" selected="" disabled="">Coronabedingungen</option>
-                                    <option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 48h negativ getestet worden (PCR)</option>
-                                    <option value="seit mindestens 14 Tagen vollständig geimpft">seit mindestens 14 Tagen vollständig geimpft</option>
-                                    <option value="genesen">genesen</option>
+                                    <!--option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 48h negativ getestet worden (PCR)</option-->
+                                    <option value="seit mindestens 14 Tagen vollständig geimpft + Schnelltest">seit mindestens 14 Tagen vollständig geimpft + Schnelltest</option>
+                                    <option value="genesen + Schnelltest">genesen + Schnelltest</option>
                                 </select>
                             </div>
                             <div class="col-md-6 form-group">
